--- a/tela_login/estilos/media-query.css
+++ b/tela_login/estilos/media-query.css
@@ -7,9 +7,26 @@
     --cor5: #D92525;
 }
 
+@media screen and (min-width:798px) {
+    #imagem {
+        display: block;
+        background-image: url('../imagens/pexels-sean-whang-804269.jpg');
+
+
+    }
+}
+
 @media screen and (min-width:798px) AND (max-width:992px) {
     body {
         background-image: linear-gradient(var(--cor1), var(--cor2));
+    }
+
+    #imagem {
+        width: 100%;
+        background-size: cover;
+        height: 30%;
+        background-position: left bottom;
+        background-repeat: no-repeat;
     }
 
     main {
@@ -41,7 +58,6 @@
     }
 
     #formulario {
-
         width: 100%;
         height: 50%;
     }
