--- a/tela_login/estilos/style.css
+++ b/tela_login/estilos/style.css
@@ -58,20 +58,15 @@ main h1
 }
 #imagem
 {
-    background-image:url('../imagens/pexels-sean-whang-804269.jpg');
-    width:100%;
-    background-size: cover;
-    height:30%;
-    background-position: left bottom;
-    background-repeat: no-repeat;
-
+display:none;
+   
 }
 #formulario
 {
     display:flex;
     flex-direction: column;
     width:100%;
-    height:70%;
+    height:100%;
     gap:20px;
     justify-content: center;
     align-items: center;
